Làm bình luận sản phẩm sao khi trạng thái hóa đơn "Delivered"
Làm bình luận sản phẩm sao khi trạng thái hóa đơn "Delivered"

--- a/public/frontend/css/single-product-details.css
+++ b/public/frontend/css/single-product-details.css
@@ -664,3 +664,18 @@ input[type="number"] {
 .product-favourite a{
     cursor: pointer;
 }
+.star-input {
+    display: flex;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.star {
+    color: white; 
+    transition: color 0.3s;
+    -webkit-text-stroke: 1px #ff9800; 
+}
+
+.star.selected {
+    color: #ff9800; 
+}
