--- a/public/frontend/css/slideshow.css
+++ b/public/frontend/css/slideshow.css
@@ -2,7 +2,7 @@
 .swiper-container {
   height: calc(80vh - 0px);  /* Chiều cao của swiper được tính dựa trên 80% chiều cao cửa sổ trình duyệt */
   margin: 0px;               /* Không có margin xung quanh container */
-  background-color: #a1e7ea; /* Màu nền của container */
+  background-color: #ace2f582; /* Màu nền của container */
 }
 
 /* Cấu hình cho mỗi slide */
@@ -26,14 +26,16 @@
 
 /* Cấu hình cho container chứa ảnh */
 .image-container {
-  margin-top: 100px;
-  margin-right: 100px;
-  width: 500px;                   /* Chiều rộng cố định của ảnh là 500px */
-  height: 370px;                  /* Chiều cao cố định của ảnh là 370px */
-  background-size: cover;         /* Đảm bảo hình ảnh bao phủ toàn bộ vùng chứa */
-  background-position: center;    /* Đặt vị trí của hình ảnh ở chính giữa vùng chứa */
-  flex-shrink: 0;                 /* Ngăn ảnh co lại khi không đủ không gian */
-  border-radius: 17px;
+  margin: auto;                   /* Căn giữa container hình ảnh */
+  margin-top: 100px;              /* Khoảng cách phía trên */
+  margin-bottom: 100px;           /* Khoảng cách phía dưới */
+  width: 100%;                    /* Chiều rộng khung ảnh chiếm 100% khung cha */
+  max-width: 500px;               /* Đặt chiều rộng tối đa là 500px */
+  aspect-ratio: 4 / 3;            /* Đặt tỷ lệ khung hình là 4:3 */
+  background-size: cover;         /* Đảm bảo hình ảnh bao phủ toàn bộ khung */
+  background-position: center;    /* Đặt hình ảnh ở chính giữa */
+  border-radius: 17px;            /* Bo góc khung ảnh */
+  position: relative;             /* Đặt vị trí tương đối để không bị ảnh hưởng bởi các phần tử khác */
 }
 
 /* Cấu hình cho container chứa nội dung */
@@ -149,170 +151,3 @@
   left: 130px;                     /* Đặt phần chứa slideshow cách bên trái 130px */
 }
 
-
-
-
-
-
-
-
-
-
-
-
-/* .swiper-container {
-  height: calc(80vh - 0px);
-  margin: 0px;
-  background-color: #a1e7ea;
-}
-
-.swiper-slide { 
-  overflow: hidden;
-}
-
-.slide-inner {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-size: cover;
-  background-position: center;
-}
-
-.swiper-slide-active h2 {
-  animation: fadeInLeft 0.8s;
-  -webkit-animation-delay: 1s;
-  animation-delay: 0.3s;
-  opacity: 1;
-}
-
-.swiper-slide-active p {
-  animation: fadeInRight 0.8s;
-  -webkit-animation-delay: 1s;
-  animation-delay: 0.3s;
-  opacity: 1;
-}
-
-.swiper-slide-active .buttons .green-button,
-.swiper-slide-active .buttons .orange-button {
-  animation: fadeInUp 0.8s;
-  -webkit-animation-delay: 1s;
-  animation-delay: 0.3s;
-  opacity: 1;
-}
-
-.slide-inner .header-text {
-  position: absolute;
-  width: 50%;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.slide-inner .header-text h2 {
-  position: relative;
-  z-index: 2;
-  font-size: 40px;
-  color: black;
-  font-weight: 700;
-  opacity: 1;
-  visibility: visible;
-  line-height: 70px;
-}
-.slide-inner .header-text h3 {
-  position: relative;
-  z-index: 2;
-  font-size: 40px;
-  color: white;
-  font-weight: 700;
-  opacity: 1;
-  visibility: visible;
-  line-height: 70px;
-}
-
-.slide-inner .header-text .div-dec {
-  width: 80px;
-  height: 6px;
-  border-radius: 3px;
-  background-color: #fff;
-  margin-bottom: 40px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.slide-inner .header-text p {
-  color: #fff;
-  margin-right: 60px;
-  margin-bottom: 50px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.slide-inner .header-text h2 em {
-  font-style: normal;
-  color: #ff511a;
-}
-
-.slideshow-button {
-  width: 130px;
-  height: 45px;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-  margin-left: 36%;
-}
-
-.slideshow-button:hover {
-  transform: scale(1.1) translateY(-5px);
-}
-
-.slideshow-button a {
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 20px;
-}
-.action-slideshow {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin: 20px 0;
-  position: relative;
-  bottom: 80px;
-  z-index: 2;
-  font-size: 20px;
-  color: black;
-  font-weight: 700;
-  opacity: 1;
-  visibility: visible;
-  cursor: pointer;
-}
-.swiper-prev,
-.swiper-next {
-  width: 30px;
-  height: 30px;
-  color: #fff;
-  background-color: black;
-  border-radius: 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
-.swiper-prev:hover,
-.swiper-next:hover {
-  transform: scale(1.1) translateY(-5px);
-}
-.swiper-prev i,
-.swiper-next i {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.ctn-slideshow{
-  position: relative;
-  top:350px;
-  left: 130px;
-} */
