chỉnh css ở trang wishlist và trang comment
chỉnh css ở trang wishlist và trang comment

--- a/public/frontend/css/wishlist.css
+++ b/public/frontend/css/wishlist.css
@@ -105,7 +105,7 @@
 /* Product grid layout */
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
     gap: 20px;
     margin-top:120px
 }
@@ -190,6 +190,9 @@
     font-size: 10px;
 }
 
+.action-buttons .add-to-cart-btn{
+    height: 41px;
+}
 /* Page background color */
 body {
     background-color: #fff;
