--- a/public/frontend/css/search.css
+++ b/public/frontend/css/search.css
@@ -8,7 +8,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
+    margin: 60px auto;
     gap: 10px;
     width: 100%;
     height: 121px;
